builds linux deb, can run as webserver